[package]
name = "thumbnailer"
version = "0.1.0"
authors = ["The Thumbnailer Developers <thumbnailer@dieterle.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
imageproc = "0.20.0"
rusttype = "0.8.2"
globwalk = "0.7"
rayon = "1.3.0"